--- a/admin.html
+++ b/admin.html
@@ -9,9 +9,8 @@
     <link rel="main.js" href="assets\js\main.js">
     <link rel="search.js" href="assets\js\search.js">
     <link rel="comment.js" href="assets\js\comment.js">
-  
-    <!-- Inline note: main.js handles nav behaviors and fetches searchIndex.json -->
-  
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9429571484429929"
+    crossorigin="anonymous"></script>  
   </head>
   <body>
     <header role="banner">
