--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
             placeholder="Search the entire site..." aria-label="Search site" />
           <button id="search-btn" class="btn" aria-label="Search">Search</button></a>
 
-        <a class="skip-link" href="#main"><img src="images\NNZLogo.png" 
-          alt="Main Page" height="40"/></a>      
-      
-      </a>  
+          <a class="skip-link" href="#main"><img src="images\NextChapLogo.png" 
+            alt="Main Page" height="65" width="65"/></a>      
+          </a>  
+        </a>  
   
   </div>  
   </header>
@@ -37,7 +37,6 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
-      <a href="stories/story-1/index.html">Stories</a>
       <a href="admin.html" aria-hidden="true">Admin</a> <!-- admin link is intentionally visible for demo -->
     </nav>
   </header>
