--- a/stories/Mudcreek/mudcreek.html
+++ b/stories/Mudcreek/mudcreek.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title> Mudcreek — NextChapterInk</title>
-  <link rel="stylesheet" href="assets\css\main.css"/>
+  <link rel="stylesheet" href="stories\assets\story-main.css"/>
   <link rel="main.js" href="assets\js\main.js">
   <link rel="search.js" href="assets\js\search.js">
   <link rel="comment.js" href="assets\js\comment.js">
@@ -26,9 +26,9 @@
           placeholder="Search the entire site..." aria-label="Search site" />
         <button id="search-btn" class="btn" aria-label="Search">Search</button></a>
   
-      <a class="skip-link" href="#main"><img src="images\NNZLogo.png" 
-        alt="Main Page" height="40"/></a>      
-      </a>  
+        <a class="skip-link" href="index.html"><img src="images\NNZLogo.png" 
+          alt="Main Page" height="40"/></a>      
+    </a>  
     </div>  
     
   </header>
