--- a/stories/story-2/Story2index.html
+++ b/stories/story-2/Story2index.html
@@ -1,47 +1,29 @@
 <!-- stories/story/index.html — Story landing page with chapter cards -->
-
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mudcreek — NextChapterInk</title>
-  <link rel="stylesheet" href="assets\css\main.css">
-  <link rel="main.js" href="assets\js\main.js">
-  <link rel="search.js" href="assets\js\search.js">
-  <link rel="comment.js" href="assets\js\comment.js">
+  <title>**BOLD: Story Title** — Nenzee</title>
+  <link rel="stylesheet" href="../../assets/css/main.css" />
 </head>
-
 <body>
-    <header role="banner">
-    <header class="container site-nav" role="banner">
+  <a class="skip-link" href="#story-main">Skip to content</a>
 
-        <div class="logo" aria-hidden="true">
-          <a class="search-bar" role="search" aria-label="Site search">
-          <input id="site-search" class="search-input" type="search" 
-            placeholder="Search the entire site..." aria-label="Search site" />
-          <button id="search-btn" class="btn" aria-label="Search">Search</button></a>
-
-          <a class="skip-link" href="#main"><img src="images\NNZLogo.png" 
-          alt="Main Page" height="40"/>
-          </a>  
-        </div>  
-
-  </header>
-
-  <header>
+  <header class="container site-nav" role="banner">
     <nav class="nav-links" role="navigation" aria-label="Main navigation">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="stories\story-1\Mudcreek.html">Stories</a>
-      <a href="admin.html" aria-hidden="true">Admin</a> <!-- admin link is intentionally visible for demo -->
+      <a href="../../index.html">Home</a>
+      <a href="../../about.html">About</a>
+      <a href="../../contact.html">Contact</a>
     </nav>
+
+    <div class="search-bar" role="search">
+      <input id="story-search" class="search-input" type="search" placeholder="Search this story and chapters..." aria-label="Search story" />
+      <button id="story-search-btn" class="btn">Search</button>
+    </div>
   </header>
 
-  <main id="main" class="container" role="main">
-
+  <main id="story-main" class="container" role="main">
     <h1>**BOLD: Story Title**</h1>
     <p>**BOLD: Longer description of the story.**</p>
 
@@ -53,7 +35,8 @@
         <article class="card" data-chapter="chapter-1" tabindex="0">
           <h3>Chapter 1 — **BOLD: Chapter Title**</h3>
           <p>**BOLD: Brief summary of chapter 1.**</p>
-          <div class="chapter-card-footer">
+            <a class="btn" href="chapter-1.html">Read chapter</a>
+          </div>
         </article>
 
         <!-- copy and adjust for chapter-2..chapter-10 -->
@@ -61,6 +44,7 @@
       </div>
     </section>
 
+    <section id="story-search-results" class="search-results" aria-live="polite"></section>
 
     <footer class="site-footer">
       <div><a href="../../index.html">← Home</a> • © **BOLD: Your Name**</div>
